apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'maven-publish'

group 'com.github.mouse0w0'
version '2.4.3'

sourceCompatibility = targetCompatibility = 1.8

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/mouse0w0/eventbus")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    compile 'org.ow2.asm:asm:5.2'
    compile 'net.jodah:typetools:0.6.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.1'
}
